--- a/home-index.html
+++ b/home-index.html
@@ -3,18 +3,30 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>home screen</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="loading-style.css">
+    <link rel="stylesheet" href="home-style.css">
   </head>
   <body>
-    <a href="home-index.html">
-      <div class="img-loading-screen"></div>
-    </a>
+    <div class="heading">
+        <h1>Halo,</h1>
+        <h2>Ayo laporkan! Jangan viralkan!</h2>
+    </div>
+    <div class="searchbar">
+        <i class="fa-search"></i>
+        <input type="text" class="form-control" placeholder="Have a question?">
+        <button class="btn btn-primary">Search</button>
+    </div>
 
     
+
+
+
+
+
+
     <!-- Js link------------- -->
-    <script src="loading-script.js"></script>
+    <script src="home-script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
