--- a/form.html
+++ b/form.html
@@ -8,6 +8,9 @@
     <link href="./style.css" rel="stylesheet"/>
   </head>
   <body class="p-3">
+    <a href="./list-form.html">
+      <img src="./IMG/grid.png" class="tombol-back">
+      </a>
     <p class="lead">Identitas Korban</p>
     <input type="text" class="form-control" id="nama" placeholder="Nama">
     <input type="text" class="form-control mt-2" id="nomortelepon" placeholder="Nomor Telepon">
