--- a/list-form.html
+++ b/list-form.html
@@ -7,11 +7,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="./style.css" rel="stylesheet"/>
   </head>
-  <body class="p-3">
+  <body class="p-3" onload="fungsiListPelaporan()">
+    <a href="./home-index.html">
+    <img src="./IMG/grid.png" class="tombol-back">
+    </a>
     <h2 class="text-center">Laporan kamu</h2>
     <hr/>
     <div class="d-flex justify-content-end">
-        <button type="button" class="btn btn-light">Tambah Laporan</button>
+        <a href="./form.html">
+          <button type="button" class="btn btn-light">Tambah Laporan</button>
+        </a>
+    </div>
+    <div class="pt-2" id="list-laporan">
     </div>
     <script src="./script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
