--- a/home-index.html
+++ b/home-index.html
@@ -12,12 +12,45 @@
         <h1>Halo,</h1>
         <h2>Ayo laporkan! Jangan viralkan!</h2>
     </div>
-    <div class="searchbar">
-        <i class="fa-search"></i>
-        <input type="text" class="form-control" placeholder="Have a question?">
-        <button class="btn btn-primary">Search</button>
+    <div class="searchbar pt-3">
+      <img src="./IMG/search.png" class="img-banner" alt="img-searchbar">
+    </div>
+    <div class="banner pt-3">
+      <img src="./IMG/banner-ns.png" class="img-banner" alt="img-banner">
     </div>
 
+
+    <!-- ------------------------ -->
+    <div class="4-fitur">
+      <div class="d-flex justify-content-around pt-4">
+        <a href="" class="button-position text-center">
+          <img src="IMG/icon fitur/pelaporan.png" class="button-size"/>
+          <p class="text-size">Pelaporan</p>
+        </a>
+        <a href="" class="button-position text-center">
+          <img src="IMG/icon fitur/ebook.png" class="button-size"/>
+          <p class="text-size">Ebook</p>
+        </a>
+        <a href="" class="button-position text-center">
+          <img src="IMG/icon fitur/pendampingan.png" class="button-size"/>
+          <p class="text-size">Pendampingan</p>
+        </a>
+        <a href="" class="button-position text-center">
+          <img src="IMG/icon fitur/emergecy.png" class="button-size"/>
+          <p class="text-size">Emergency</p>
+        </a>
+
+    </div>
+    <div class="d-flex justify-content-between pt-3">
+        <h2>Lanjutan membaca</h2>
+        <h2><b>see all</b></h2>
+    </div>
+    <img src="./IMG/lanjutkan membaca ebook.png" class="img-banner shadow mt-3"/>
+
+
+    <div class="navigationbar">
+      <img src="./IMG/navigasi/5.png" class="img-banner" alt="">
+    </div>
     
 
 
