--- a/list-form.html
+++ b/list-form.html
@@ -1,25 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>SanCybu</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link href="./style.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+    <link href="style.css" rel="stylesheet" />
   </head>
-  <body class="p-3" onload="fungsiListPelaporan()">
+  <body onload="fungsiListPelaporan()">
     <a href="./home-index.html">
-    <img src="./IMG/grid.png" class="tombol-back">
+      <img src="./IMG/grid.png" class="tombol-back" />
     </a>
-    <h2 class="text-center">Laporan kamu</h2>
-    <hr/>
-    <div class="d-flex justify-content-end">
-        <a href="./form.html">
-          <button type="button" class="btn btn-light">Tambah Laporan</button>
+
+    <div class="content-2">
+      <h2 class="text-center">Laporan Kamu</h2>
+      <hr />
+      <div class="d-flex justify-content-end">
+        <a href="./form.html" class="tombol-tambah-laporan">
+          <button type="button" class="btn btn-light p-2" style="background-color: #f7f7f7">Tambah Laporan</button>
         </a>
+      </div>
+      <div class="pt-2" id="list-laporan"></div>
     </div>
-    <div class="pt-2" id="list-laporan">
-    </div>
+
     <script src="./script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
