--- a/home-index.html
+++ b/home-index.html
@@ -42,7 +42,7 @@
     <!-- ------------------------------------------------------------------------------ -->
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" style="margin-top: 20px;width: 100%;margin-right: auto;margin-left: auto;">
       <div class="carousel-inner" style="border-radius: 24px;">
-        <div class="carousel-item active" style="">
+        <div class="carousel-item active">
           <img src="./IMG/banner-ns.png" class="img-banner d-block w-100" alt="..."><!--Ganti Slide Banner dibagian src-->
         </div>
         <div class="carousel-item">
