--- a/home-index.html
+++ b/home-index.html
@@ -7,12 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="home-style.css">
     <link rel="stylesheet" href="./asset/sweetalert2.min.css">
-    <style>
-      .swal2-popup{
-        padding: 24px 2px !important;
-        font-size: 16px;
-      }
-    </style>
 
   </head>
   <body>
@@ -41,7 +35,7 @@
 
     <!-- ------------------------------------------------------------------------------ -->
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" style="margin-top: 20px;width: 100%;margin-right: auto;margin-left: auto;">
-      <div class="carousel-inner" style="border-radius: 24px;">
+      <div class="carousel-inner" style="border-radius: 12px;">
         <div class="carousel-item active">
           <img src="./IMG/banner-ns.png" class="img-banner d-block w-100" alt="..."><!--Ganti Slide Banner dibagian src-->
         </div>
@@ -52,11 +46,11 @@
           <img src="./IMG/banner3-ns.png" class="img-banner d-block w-100" alt="..."><!--Ganti Slide Banner dibagian src-->
         </div>
       </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <button class="carousel-control-prev opacity-0" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <button class="carousel-control-next opacity-0" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
@@ -68,29 +62,29 @@
       <div class="d-flex justify-content-around mt-4">
         <a href="list-form.html" class="button-position text-center">
           <img src="IMG/icon fitur/pelaporan.png" class="button-size"/>
-          <p class="text-size">Pelaporan</p>
+          <p class="text-size pt-1">Pelaporan</p>
         </a>
-        <a href="#" class="button-position text-center">
+        <a href="ebook-index.html" class="button-position text-center">
           <img src="IMG/icon fitur/ebook.png" class="button-size"/>
-          <p class="text-size">Ebook</p>
+          <p class="text-size pt-1">Ebook</p>
         </a>
         <a href="https://api.whatsapp.com/send/?phone=082136987639&text=hi+aku+membutuhkan+pendampingan&type=phone_number&app_absent=0" class="button-position text-center">
           <img src="IMG/icon fitur/pendampingan.png" class="button-size"/>
-          <p class="text-size">Pendampingan</p>
+          <p class="text-size pt-1">Pendampingan</p>
         </a>
         <a href="#" class="button-position text-center">
           <img src="IMG/icon fitur/emergecy.png" class="button-size" id="btn_emergency"/>
-          <p class="text-size">Emergency</p>
+          <p class="text-size pt-1">Emergency</p>
         </a>
       </div>
     </div>
 
     <div class="d-flex justify-content-between mt-3">
-        <h2>Lanjutan membaca</h2>
-        <h2><p href="#" class="fw-bold">see all</p></h2>
+        <h2>Lanjutkan membaca</h2>
+        <a href="ebook-index.html" class="fw-bold">see all</a>
     </div>
 
-    <img src="./IMG/lanjutkan membaca ebook.png" class="img-banner shadow"/>
+    <img src="./IMG/lanjutkan membaca ebook-ns.png" class="img-banner shadow mt-3"/>
 
 
 
