--- a/list-form.html
+++ b/list-form.html
@@ -18,12 +18,12 @@
     <div class="content-2">
       <h2 class="text-center">Laporan Kamu</h2>
       <hr />
-      <div class="d-flex justify-content-end">
+      <div class="d-flex justify-content-center">
         <a href="./form.html" class="tombol-tambah-laporan">
-          <button type="button" class="btn fw-semibold rounded-2" style="padding: 8px 79px;background-color: #0BCEC2;color: #fff;">Tambah Laporan</button>
+          <button type="button" class="btn fw-semibold rounded-2" style="padding: 8px 6rem;background-color: #0BCEC2;color: #fff;">Tambah Laporan</button>
         </a>
       </div>
-      <div class="pt-2" id="list-laporan"></div> 
+    <div class="pt-2" id="list-laporan"></div> 
     </div>
 
     <script src="./script.js"></script>
