--- a/ebook-index.html
+++ b/ebook-index.html
@@ -15,7 +15,7 @@
         <img src="./IMG/grid.png" class="tombol-back">
       </a>
       <a href="#">
-        <img src="./IMG/navigasi/Upload ebook.png" class="tombol-tambahEbook">
+        <img src="./IMG/navigasi/bagikan kisahmu.jpg" class="tombol-bagikankisah">
       </a>
     </div>
     
@@ -28,9 +28,15 @@
     </div>
 
     <div class="daftar-ebook">
+      <a href="#">
         <img src="./IMG/lanjutkan membaca ebook-ns.png" class="img-ebook-1 shadow mt-4"/>
+      </a>
+      <a href="#">
         <img src="./IMG/lanjutkan membaca ebook-ns-2.png" class="img-ebook-2 shadow mt-3"/>
+      </a>
+      <a href="#">
         <img src="./IMG/lanjutkan membaca ebook-ns-3.png" class="img-ebook-2 shadow mt-3"/>
+      </a>
     </div>
     
 
@@ -42,7 +48,7 @@
 
 
     <!-- Js link------------- -->
-    <script src="home-script.js"></script>
+    <script src=""></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
 
