--- a/home-index3.html
+++ b/home-index3.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>SanCybu Demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="home-style.css">
+    <link rel="stylesheet" href="home-style3.css">
     <link rel="stylesheet" href="./asset/sweetalert2.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-
 
   </head>
   <body>
@@ -17,7 +15,7 @@
         <img src="./IMG/navigasi/kiri atas.png" class="tombol-chocolate-navigationMenu mt-3">
       </a>
       <a href="#">
-        <img src="./IMG/navigasi/notification-normal.jpg" class="tombol-notification-navigationMenu mt-1">
+        <img src="./IMG/navigasi/notification-terkirim.jpg" class="tombol-notification-navigationMenu mt-1">
       </a>
     </div>
 
@@ -70,10 +68,7 @@
           <img src="IMG/icon fitur/ebook.png" class="button-size"/>
           <p class="text-size pt-1">Ebook</p>
         </a>
-
-        <!-- https://api.whatsapp.com/send/?phone=082136987639&text=hi+aku+membutuhkan+pendampingan&type=phone_number&app_absent=0 -->
-
-        <a href="pendampingan.html" class="button-position text-center">
+        <a href="https://api.whatsapp.com/send/?phone=082136987639&text=hi+aku+membutuhkan+pendampingan&type=phone_number&app_absent=0" class="button-position text-center">
           <img src="IMG/icon fitur/pendampingan.png" class="button-size"/>
           <p class="text-size pt-1">Pendampingan</p>
         </a>
@@ -105,30 +100,9 @@
     <script src="home-script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script src="./asset/sweetalert2.min.js"></script>
+
+
   </body>
-
-  <!-- <footer class="footer" id="footer">
-    <nav class="nav container">
-
-      <div class="nav__menu" id="nav-menu">
-          <ul class="nav__list">
-              <li class="nav__item">
-                  <a href="#" class="nav__link active-link">
-                      <i class='bx bx-home-alt nav__icon'></i>
-                      <span class="nav__name">Home</span>
-                  </a>
-              </li>
-              
-              <li class="nav__item">
-                  <a href="#" class="nav__link">
-                      <i class='bx bx-user nav__icon'></i>
-                      <span class="nav__name">About</span>
-                  </a>
-              </li>
-          </ul>
-      </div>
-  </nav>
-  </footer> -->
 
   <footer>
     <div class="navigationbar">
@@ -136,8 +110,5 @@
       <a href="profile.html"><img src="./IMG/navigasi/Tab Bars right.jpg" class="nav-img" alt=""></a>
     </div>
   </footer>
-    
-
-      <!-- <img src="./IMG/navigasi/5.png" class="img-banner" alt=""> -->
 
 </html>
